# CulturalExperience

./: README.md
3DTrack/: tracking calibration.indd
3DTrack/OpenCV-track-object/: .gitignore  main.py  pyvenv.cfg  setup.py
3DTrack/OpenCV-track-object/Calibration/: calib.py  capture.py
3DTrack/OpenCV-track-object/Calibration/__pycache__/: __init__.d.er  calib.d.er
3DTrack/OpenCV-track-object/__pycache__/: main.d.er
3DTrack/OpenCV-track-object/traking/: aruco.py  aruco_3d_pose.py  traking.py
3DTrack/OpenCV-track-object/traking/__pycache__/: __init__.d.er  aruco.d.er
3DTrack/OpenCVUnity-bridger/: CMakeLists.txt
3DTrack/OpenCVUnity-bridger/include/: ImageProcessor.hpp
3DTrack/OpenCVUnity-bridger/src/: ImageProcessor.cpp
